# obr

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MODULE.bazel  PATENTS  README.md  WORKSPACE
.github/actions/obr-builder/: action.yml
.github/workflows/: ci-bazel.yml
docs/: loudspeaker_layouts.md
obr/ambisonic_binaural_decoder/: BUILD  ambisonic_binaural_decoder.cc  ambisonic_binaural_decoder.h  binaural_filters.h  dsp_utils.cc  dsp_utils.h  fft_manager.cc  fft_manager.h  partitioned_fft_filter.cc  partitioned_fft_filter.h  planar_interleaved_conversion.cc  planar_interleaved_conversion.h  resampler.cc  resampler.h  sample_type_conversion.cc  sample_type_conversion.h  sh_hrir_creator.cc  sh_hrir_creator.h  wav.cc  wav.h  wav_reader.cc  wav_reader.h
obr/ambisonic_binaural_decoder/binaural_filters/: BUILD  binaural_filters_1_oa_l.cc  binaural_filters_1_oa_l.h  binaural_filters_1_oa_r.cc  binaural_filters_1_oa_r.h  binaural_filters_2_oa_l.cc  binaural_filters_2_oa_l.h  binaural_filters_2_oa_r.cc  binaural_filters_2_oa_r.h  binaural_filters_3_oa_l.cc  binaural_filters_3_oa_l.h  binaural_filters_3_oa_r.cc  binaural_filters_3_oa_r.h  binaural_filters_4_oa_l.cc  binaural_filters_4_oa_l.h  binaural_filters_4_oa_r.cc  binaural_filters_4_oa_r.h  binaural_filters_5_oa_l.cc  binaural_filters_5_oa_l.h  binaural_filters_5_oa_r.cc  binaural_filters_5_oa_r.h  binaural_filters_6_oa_l.h  binaural_filters_6_oa_r.h  binaural_filters_7_oa_l.h  binaural_filters_7_oa_r.h  binaural_filters_wrapper.cc  binaural_filters_wrapper.h
obr/ambisonic_binaural_decoder/tests/: BUILD  ambisonic_binaural_decoder_test.cc  dsp_utils_test.cc  fft_manager_test.cc  partitioned_fft_filter_test.cc  planar_interleaved_conversion_test.cc  resampler_test.cc  sample_type_conversion_test.cc
obr/ambisonic_encoder/: BUILD  ambisonic_encoder.cc  ambisonic_encoder.h  associated_legendre_polynomials_generator.cc  associated_legendre_polynomials_generator.h
obr/ambisonic_encoder/tests/: BUILD  ambisonic_encoder_benchmark.cc  ambisonic_encoder_test.cc  associated_legendre_polynomials_generator_test.cc
obr/ambisonic_rotator/: BUILD  ambisonic_rotator.cc  ambisonic_rotator.h
obr/ambisonic_rotator/tests/: BUILD  hoa_rotator_test.cc  spherical_angle.cc  spherical_angle.h  spherical_angle_test.cc
obr/audio_buffer/: BUILD  aligned_allocator.h  audio_buffer.cc  audio_buffer.h  channel_view.cc  channel_view.h  simd_macros.h  simd_utils.cc  simd_utils.h
obr/audio_buffer/tests/: BUILD  aligned_allocator_test.cc  audio_buffer_test.cc  channel_view_test.cc  simd_utils_test.cc
obr/cli/: BUILD  obr_cli.cc  obr_cli_lib.cc  obr_cli_lib.h
obr/cli/proto/: BUILD  oba_metadata.proto
obr/cli/testdata/: 7.1.4_test_oba.textproto  BUILD
obr/cli/tests/: BUILD  obr_cli_lib_test.cc
obr/common/: BUILD  ambisonic_utils.h  constants.h  misc_math.h  test_util.cc  test_util.h
obr/common/tests/: BUILD  ambisonic_utils_test.cc  misc_math_test.cc  test_util_test.cc
obr/peak_limiter/: BUILD  peak_limiter.cc  peak_limiter.h
obr/renderer/: BUILD  audio_element_config.cc  audio_element_config.h  audio_element_type.h  input_channel_config.h  loudspeaker_layouts.h  obr_impl.cc  obr_impl.h
obr/renderer/tests/: BUILD  audio_element_config_test.cc  audio_element_type_test.cc  loudspeaker_layouts_test.cc  obr_impl_test.cc
